--- a/index_pose.html
+++ b/index_pose.html
@@ -47,6 +47,9 @@
     --vs-gap: 2cqw;
     --vs-font: 2.2cqw;
     --vs-letter: .18cqw;
+
+    /* Stack FABs */
+    --fab-stack-gap: clamp(8px, 1.6cqw, 12px);
   }
 
   html,body{height:100%}
@@ -68,7 +71,7 @@
     container-type:size; /* abilita cqw/cqh e @container */
   }
 
-  /* Fondale stadio (gradiente principale) */
+  /* Fondale stadio */
   .stadium{
     position:absolute; inset:0; z-index:0;
     background:
@@ -76,10 +79,10 @@
       linear-gradient(to bottom, var(--roof-mid) 0%, var(--roof-dark) 48%, #061007 100%);
   }
 
-  /* Strisce oblique tetto/gradoni (SVG: non spariscono nello screenshot) */
+  /* Strisce oblique */
   .roof-stripes{ position:absolute; inset:0; z-index:1; pointer-events:none; display:block; }
 
-  /* Campo (SVG con clipPath: niente sbordo) */
+  /* Campo (SVG con clipPath) */
   .pitch-wrap{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
@@ -87,7 +90,7 @@
   }
   #pitch{ position:absolute; inset:0; width:100%; height:100%; display:block; }
 
-  /* Layer giocatori (NO clip) */
+  /* Giocatori */
   .players{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
@@ -166,7 +169,7 @@
     .subs-zone{ padding: 0 .8cqw; }
   }
 
-  /* FAB Share - Material, quadrato, top-left, contrasto alto */
+  /* ===== FAB Share (Material bianco, quadrato) ===== */
   .fab-share{
     --fab-size: clamp(36px, 10cqw, 48px);
     --fab-edge: clamp(10px, 2cqw, 16px);
@@ -174,11 +177,10 @@
 
     position:absolute; top:var(--fab-edge); left:var(--fab-edge);
     width:var(--fab-size); height:var(--fab-size);
-
     display:grid; place-items:center;
+
     border: 1px solid rgba(0,0,0,.08);
     border-radius: var(--fab-radius);
-
     background:#fff;  color:#111;
     box-shadow: 0 2px 4px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.16);
     cursor:pointer; z-index:10;
@@ -192,20 +194,64 @@
   .fab-share[aria-busy="true"]{ pointer-events:none; opacity:.7 }
   .fab-share svg{ width: calc(var(--fab-size) * .56); height: calc(var(--fab-size) * .56); fill: currentColor; }
 
-  /* ── Opzione B: FAB più piccolo SOLO su container stretti (mobile) ── */
+  /* ===== FAB Instagram (stack sotto, outline icon, arrow ↗) ===== */
+  .fab-ig{
+    /* leggermente più piccolo per gerarchia visiva */
+    --fab-size: clamp(34px, 9cqw, 46px);
+    --fab-edge: clamp(10px, 2cqw, 16px);
+    --fab-radius: 12px;
+
+    position:absolute;
+    top: calc(var(--fab-edge) + var(--fab-size) + var(--fab-stack-gap));
+    left: var(--fab-edge);
+    width:var(--fab-size); height:var(--fab-size);
+    display:grid; place-items:center;
+
+    border: 1px solid rgba(0,0,0,.08);
+    border-radius: var(--fab-radius);
+    background:#fff; color:#111;
+    box-shadow: 0 2px 4px rgba(0,0,0,.16), 0 8px 16px rgba(0,0,0,.14);
+    cursor:pointer; z-index:10;
+
+    transition: transform .15s ease, box-shadow .15s ease,
+                background-color .15s ease, opacity .15s ease, border-color .15s ease;
+  }
+  .fab-ig:hover{ transform: translateY(-1px); background:#f5f6f8; box-shadow: 0 3px 6px rgba(0,0,0,.18), 0 12px 20px rgba(0,0,0,.16); }
+  .fab-ig:active{ transform: translateY(0); background:#eceef2; }
+  .fab-ig:focus-visible{ outline: 3px solid rgba(66,133,244,.55); outline-offset: 2px; }
+  .fab-ig svg{
+    width: calc(var(--fab-size) * .58);
+    height: calc(var(--fab-size) * .58);
+    /* outline icon: solo stroke */
+    fill: none; stroke: currentColor; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round;
+  }
+  /* piccolo indicatore esterno */
+  .fab-ig::after{
+    content:"↗"; position:absolute; top:2px; right:2px;
+    font-size: calc(var(--fab-size) * .28);
+    color: currentColor; opacity:.55; line-height:1;
+    pointer-events:none;
+  }
+
+  /* FABs più piccoli su mobile (container) */
   @container (max-width: 520px){
     .fab-share{
       --fab-size: clamp(24px, 7cqw, 34px);
       --fab-edge: clamp(8px, 1.6cqw, 12px);
       --fab-radius: 10px;
     }
-    .fab-share svg{
-      width: calc(var(--fab-size) * .50);
-      height: calc(var(--fab-size) * .50);
+    .fab-share svg{ width: calc(var(--fab-size) * .50); height: calc(var(--fab-size) * .50); }
+
+    .fab-ig{
+      --fab-size: clamp(22px, 6.4cqw, 32px);
+      --fab-edge: clamp(8px, 1.6cqw, 12px);
+      --fab-radius: 10px;
+      top: calc(var(--fab-edge) + var(--fab-size) + var(--fab-stack-gap));
     }
+    .fab-ig svg{ width: calc(var(--fab-size) * .52); height: calc(var(--fab-size) * .52); }
   }
 
-  /* ===== EXPORT MODE ===== */
+  /* EXPORT MODE: nascondo ombre arrotondamenti, ecc. */
   .stage.is-capturing{ border-radius:0 !important; box-shadow:none !important; background:#0b0c11 !important; }
   .stage.is-capturing svg{ shape-rendering: geometricPrecision; }
   .stage.is-capturing #lines > *{ stroke-width: 3.6px !important; }
@@ -271,7 +317,7 @@
       <img id="logo2" class="team-logo" alt="" crossorigin="anonymous">
     </div>
 
-    <!-- Campo (SVG con clipPath interno) -->
+    <!-- Campo -->
     <div class="pitch-wrap">
       <svg id="pitch" viewBox="0 0 1000 1000" preserveAspectRatio="none" aria-hidden="false">
         <defs>
@@ -282,9 +328,10 @@
             <stop offset="0%"  stop-color="#0d7f26"/>
             <stop offset="100%" stop-color="#0a6f20"/>
           </linearGradient>
+          <!-- Bande 50/50 -->
           <pattern id="mow" patternUnits="userSpaceOnUse" width="1000" height="140">
-            <rect x="0" y="0"   width="1000" height="70" fill="#ffffff" opacity="0.12"/>
-            <rect x="0" y="70"  width="1000" height="70" fill="transparent"/>
+            <rect x="0" y="0" width="1000" height="70" fill="#ffffff" opacity="0.12"/>
+            <rect x="0" y="70" width="1000" height="70" fill="transparent"/>
           </pattern>
         </defs>
 
@@ -308,10 +355,20 @@
       <div class="subs-list" id="subsList"></div>
     </div>
 
-    <!-- FAB Share -->
+    <!-- FAB Share (Condividi storia) -->
     <button id="shareFab" class="fab-share" title="Condividi" aria-label="Condividi">
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7a3.2 3.2 0 000-1.39l7-4.11a2.5 2.5 0 10-.9-1.45l-7 4.11a2.5 2.5 0 100 4.07l7.05 4.14a2.5 2.5 0 101.94-2z"/>
+      </svg>
+    </button>
+
+    <!-- FAB Instagram (apre profilo IG) -->
+    <button id="igFab" class="fab-ig" title="Apri Instagram @asd_petriolese_calcio" aria-label="Apri Instagram @asd_petriolese_calcio">
+      <!-- Instagram outline icon -->
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <rect x="3" y="3" width="18" height="18" rx="5" ry="5"></rect>
+        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+        <circle cx="17.5" cy="6.5" r="1.2"></circle>
       </svg>
     </button>
   </div>
@@ -517,27 +574,32 @@ function setLogo(imgEl, src, alt){
 <!-- html2canvas -->
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
 
-<!-- Handler FAB Share -->
+<!-- Handlers FAB -->
 <script>
 document.addEventListener('DOMContentLoaded', ()=>{
   const fab = document.getElementById('shareFab');
+  const ig  = document.getElementById('igFab');
   const stage = document.querySelector('.stage');
 
   async function stageToBlob(){
     const prevVis = fab.style.visibility;
+    const prevVisIG = ig ? ig.style.visibility : '';
+
+    // nascondo i FAB durante lo scatto
     fab.style.visibility = 'hidden';
+    if(ig) ig.style.visibility = 'hidden';
     stage.classList.add('is-capturing');
 
-    /* ==== QUALITY BOOST ==== */
-    const targetW = 1080, targetH = 1920;                // IG story size
+    /* qualità alta + downscale */
+    const targetW = 1080, targetH = 1920;
     const rect = stage.getBoundingClientRect();
     const dpr  = Math.max(1, window.devicePixelRatio || 1);
     const need = Math.max(targetW / rect.width, targetH / rect.height);
-    const scale = Math.max(3, dpr, need);                // almeno 3x, o dpr, o quanto serve per 1080x1920
+    const scale = Math.max(3, dpr, need);
 
     const canvas = await html2canvas(stage, {
       backgroundColor: '#0b0c11',
-      scale,                   // <- dinamico
+      scale,
       useCORS: true
     });
 
@@ -545,13 +607,11 @@ document.addEventListener('DOMContentLoaded', ()=>{
     out.width = targetW; out.height = targetH;
     const ctx = out.getContext('2d', { willReadFrequently:true });
 
-    // sfondo pieno + downscale di qualità
     ctx.fillStyle = '#0b0c11';
     ctx.fillRect(0,0,targetW,targetH);
     ctx.imageSmoothingEnabled = true;
     ctx.imageSmoothingQuality = 'high';
 
-    // fit contenuto nel 1080x1920 mantenendo proporzioni
     const ratio = Math.min(targetW/canvas.width, targetH/canvas.height);
     const w = Math.round(canvas.width * ratio);
     const h = Math.round(canvas.height * ratio);
@@ -561,8 +621,9 @@ document.addEventListener('DOMContentLoaded', ()=>{
 
     stage.classList.remove('is-capturing');
     fab.style.visibility = prevVis || 'visible';
+    if(ig) ig.style.visibility = prevVisIG || 'visible';
 
-    return await new Promise(res => out.toBlob(b => res(b), 'image/png', 0.95));
+    return await new Promise(res=> out.toBlob(b=>res(b), 'image/png', 0.95));
   }
 
   async function shareOrDownload(){
@@ -587,7 +648,30 @@ document.addEventListener('DOMContentLoaded', ()=>{
     }
   }
 
+  function openInstagram(){
+    const username = 'asd_petriolese_calcio';
+    const web = 'https://www.instagram.com/asd_petriolese_calcio/';
+    const scheme = `instagram://user?username=${username}`;
+    const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+
+    if(isMobile){
+      const start = Date.now();
+      // tenta deep-link
+      window.location.href = scheme;
+
+      // fallback web se l'app non si apre
+      setTimeout(()=>{
+        if(Date.now() - start < 1600){
+          window.open(web, '_blank', 'noopener');
+        }
+      }, 700);
+    }else{
+      window.open(web, '_blank', 'noopener');
+    }
+  }
+
   fab.addEventListener('click', shareOrDownload, { passive:true });
+  ig.addEventListener('click', openInstagram, { passive:true });
 });
 </script>
 </body>
