--- a/index_pose.html
+++ b/index_pose.html
@@ -194,10 +194,9 @@
   .fab-share[aria-busy="true"]{ pointer-events:none; opacity:.7 }
   .fab-share svg{ width: calc(var(--fab-size) * .56); height: calc(var(--fab-size) * .56); fill: currentColor; }
 
-  /* ===== FAB Instagram (stack sotto, outline icon, arrow ↗) ===== */
+  /* ===== FAB Instagram (ora IDENTICO nelle dimensioni al FAB share) ===== */
   .fab-ig{
-    /* leggermente più piccolo per gerarchia visiva */
-    --fab-size: clamp(34px, 9cqw, 46px);
+    --fab-size: clamp(36px, 10cqw, 48px);
     --fab-edge: clamp(10px, 2cqw, 16px);
     --fab-radius: 12px;
 
@@ -210,22 +209,20 @@
     border: 1px solid rgba(0,0,0,.08);
     border-radius: var(--fab-radius);
     background:#fff; color:#111;
-    box-shadow: 0 2px 4px rgba(0,0,0,.16), 0 8px 16px rgba(0,0,0,.14);
+    box-shadow: 0 2px 4px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.16);
     cursor:pointer; z-index:10;
 
     transition: transform .15s ease, box-shadow .15s ease,
                 background-color .15s ease, opacity .15s ease, border-color .15s ease;
   }
-  .fab-ig:hover{ transform: translateY(-1px); background:#f5f6f8; box-shadow: 0 3px 6px rgba(0,0,0,.18), 0 12px 20px rgba(0,0,0,.16); }
+  .fab-ig:hover{ transform: translateY(-1px); background:#f5f6f8; box-shadow: 0 3px 6px rgba(0,0,0,.20), 0 12px 20px rgba(0,0,0,.18); }
   .fab-ig:active{ transform: translateY(0); background:#eceef2; }
   .fab-ig:focus-visible{ outline: 3px solid rgba(66,133,244,.55); outline-offset: 2px; }
   .fab-ig svg{
-    width: calc(var(--fab-size) * .58);
-    height: calc(var(--fab-size) * .58);
-    /* outline icon: solo stroke */
+    width: calc(var(--fab-size) * .56);
+    height: calc(var(--fab-size) * .56);
     fill: none; stroke: currentColor; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round;
   }
-  /* piccolo indicatore esterno */
   .fab-ig::after{
     content:"↗"; position:absolute; top:2px; right:2px;
     font-size: calc(var(--fab-size) * .28);
@@ -233,25 +230,23 @@
     pointer-events:none;
   }
 
-  /* FABs più piccoli su mobile (container) */
+  /* FABs più piccoli su mobile (container) — identici anche qui */
   @container (max-width: 520px){
-    .fab-share{
+    .fab-share,
+    .fab-ig{
       --fab-size: clamp(24px, 7cqw, 34px);
       --fab-edge: clamp(8px, 1.6cqw, 12px);
       --fab-radius: 10px;
     }
-    .fab-share svg{ width: calc(var(--fab-size) * .50); height: calc(var(--fab-size) * .50); }
-
-    .fab-ig{
-      --fab-size: clamp(22px, 6.4cqw, 32px);
-      --fab-edge: clamp(8px, 1.6cqw, 12px);
-      --fab-radius: 10px;
-      top: calc(var(--fab-edge) + var(--fab-size) + var(--fab-stack-gap));
+    .fab-ig{ top: calc(var(--fab-edge) + var(--fab-size) + var(--fab-stack-gap)); }
+    .fab-share svg,
+    .fab-ig   svg{
+      width: calc(var(--fab-size) * .50);
+      height: calc(var(--fab-size) * .50);
     }
-    .fab-ig svg{ width: calc(var(--fab-size) * .52); height: calc(var(--fab-size) * .52); }
   }
 
-  /* EXPORT MODE: nascondo ombre arrotondamenti, ecc. */
+  /* EXPORT MODE */
   .stage.is-capturing{ border-radius:0 !important; box-shadow:none !important; background:#0b0c11 !important; }
   .stage.is-capturing svg{ shape-rendering: geometricPrecision; }
   .stage.is-capturing #lines > *{ stroke-width: 3.6px !important; }
@@ -364,7 +359,6 @@
 
     <!-- FAB Instagram (apre profilo IG) -->
     <button id="igFab" class="fab-ig" title="Apri Instagram @asd_petriolese_calcio" aria-label="Apri Instagram @asd_petriolese_calcio">
-      <!-- Instagram outline icon -->
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <rect x="3" y="3" width="18" height="18" rx="5" ry="5"></rect>
         <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
@@ -656,10 +650,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
 
     if(isMobile){
       const start = Date.now();
-      // tenta deep-link
       window.location.href = scheme;
-
-      // fallback web se l'app non si apre
       setTimeout(()=>{
         if(Date.now() - start < 1600){
           window.open(web, '_blank', 'noopener');
